# PiPicoESC

./: .gitignore  CMakeLists.txt  README.md  piFlash.sh  pi_flash.sh
.cache/clangd/index/: controller.c.7E45B9C44395FD9D.idx
esc/: CMakeLists.txt  defines.hpp  main.cpp
esc/common/: motor.hpp
esc/include/common/: defines.hpp
esc/include/motor_drive/: current_sense.hpp  foc.hpp  gatedriver_io.hpp
esc/include/uart_io/: uart_io.hpp
esc/platform/pico/: interfacing.hpp
esc/schemes/sin/: states.cpp  states.hpp
esc/src/: CMakeLists.txt  defines.h  main.cpp
esc/src/control_logic/: motor_command.cpp
esc/src/motor_drive/: CMakeLists.txt  README.md  control.cpp  control.h  current_sense.cpp  current_sense.hpp  foc.cpp  foc.h  foc.hpp  gatedriver_io.cpp  gatedriver_io.h  gatedriver_io.hpp  rpm_sense.cpp  rpm_sense.hpp  safety.cpp  safety.h
esc/src/uart_io/: uart_io.cpp  uart_io.hpp
serial_tester/: CMakeLists.txt  main.cpp  main.hpp
src/: CMakeLists.txt  chatgpt.cpp  control.c  controller.c  controller.cpp  controllerMaths.h  controller_maths.h  controller_maths.hpp  core_io.hpp  defines.h  defines.hpp  enums.h  interfacing.h  interfacing.hpp  limits.cpp  limits.h  loops.cpp  loops.h  main.cpp  states.cpp  states.h  states.hpp
src/common/: motor.hpp  types.hpp
src/control_logic/: CMakeLists.txt  motor_command.cpp  motor_command.h
src/maths/: CMakeLists.txt  trig.cpp  trig.h
src/motor_drive/: CMakeLists.txt  README.md  current_sense.h  foc.cpp  foc.h  gatedriver_io.cpp  gatedriver_io.h  rpm_sense.cpp  rpm_sense.h  safety.cpp  safety.h
src/peripherals/: CMakeLists.txt  current.cpp  current.h  hv_battery.cpp  hv_battery.h  hv_input.cpp  hv_input.h  motor_rotation.cpp  motor_rotation.h  phase_current.cpp  phase_current.h  phase_voltage.cpp  phase_voltage.h  reverse.cpp  reverse.h  throttle.cpp  throttle.h  voltage.cpp  voltage.h
src/platform/pico/: core_io.hpp  interfacing.hpp
src/schemes/sin/: states.cpp  states.hpp
src/uart_io/: CMakeLists.txt  uart_io.h
